# serializer version: 1
# name: test_build[docs_assets][docs_assets]
  dict({
    'site/index.html': '''
      <!DOCTYPE html>
      <html lang="en" data-bs-theme="light">
          <head>
              <meta charset="utf-8">
              <meta http-equiv="X-UA-Compatible" content="IE=edge">
              <meta name="viewport" content="width=device-width, initial-scale=1.0">
              <meta name="description" content="None">
              
              
              <link rel="shortcut icon" href="img/favicon.ico">
              <title>Test1</title>
              <link href="css/bootstrap.min.css" rel="stylesheet">
              <link href="css/fontawesome.min.css" rel="stylesheet">
              <link href="css/brands.min.css" rel="stylesheet">
              <link href="css/solid.min.css" rel="stylesheet">
              <link href="css/v4-font-face.min.css" rel="stylesheet">
              <link href="css/base.css" rel="stylesheet">
              <link id="hljs-light" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github.min.css" >
              <link id="hljs-dark" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github-dark.min.css" disabled>
              <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
              <script>hljs.highlightAll();</script> 
          </head>
      
          <body class="homepage">
              <div class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
                  <div class="container">
                      <a class="navbar-brand" href=".">Test1</a>
                      <!-- Expander button -->
                      <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
                          <span class="navbar-toggler-icon"></span>
                      </button>
      
                      <!-- Expanded navigation -->
                      <div id="navbar-collapse" class="navbar-collapse collapse">
                              <!-- Main navigation -->
                              <ul class="nav navbar-nav">
                                  <li class="nav-item">
                                      <a href="." class="nav-link active" aria-current="page">Wooooo</a>
                                  </li>
                                  <li class="nav-item">
                                      <a href="page/" class="nav-link">This is a file</a>
                                  </li>
                              </ul>
      
                          <ul class="nav navbar-nav ms-md-auto">
                                  <li class="nav-item">
                                      <a rel="prev" class="nav-link disabled">
                                          <i class="fa fa-arrow-left"></i> Previous
                                      </a>
                                  </li>
                                  <li class="nav-item">
                                      <a rel="next" href="page/" class="nav-link">
                                          Next <i class="fa fa-arrow-right"></i>
                                      </a>
                                  </li>
                          </ul>
                      </div>
                  </div>
              </div>
      
              <div class="container">
                  <div class="row">
                          <div class="col-md-3"><div class="navbar-expand-md bs-sidebar hidden-print affix" role="complementary">
          <div class="navbar-header">
              <button type="button" class="navbar-toggler collapsed" data-bs-toggle="collapse" data-bs-target="#toc-collapse" title="Table of Contents">
                  <span class="fa fa-angle-down"></span>
              </button>
          </div>
      
          
          <div id="toc-collapse" class="navbar-collapse collapse card bg-body-tertiary">
              <ul class="nav flex-column">
                  
                  <li class="nav-item" data-bs-level="1"><a href="#wooooo" class="nav-link">Wooooo</a>
                    <ul class="nav flex-column">
                    </ul>
                  </li>
              </ul>
          </div>
      </div></div>
                          <div class="col-md-9" role="main">
      
      <h1 id="wooooo">Wooooo</h1></div>
                  </div>
              </div>
      
              <footer class="col-md-12">
                  <hr>
                  <p>Documentation built with <a href="https://www.mkdocs.org/">MkDocs</a>.</p>
              </footer>
              <script src="js/bootstrap.bundle.min.js"></script>
              <script>
                  var base_url = ".",
                      shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
              </script>
              <script src="js/base.js"></script>
      
              <div class="modal" id="mkdocs_keyboard_modal" tabindex="-1" role="dialog" aria-labelledby="keyboardModalLabel" aria-hidden="true">
          <div class="modal-dialog">
              <div class="modal-content">
                  <div class="modal-header">
                      <h4 class="modal-title" id="keyboardModalLabel">Keyboard Shortcuts</h4>
                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                  </div>
                  <div class="modal-body">
                    <table class="table">
                      <thead>
                        <tr>
                          <th style="width: 20%;">Keys</th>
                          <th>Action</th>
                        </tr>
                      </thead>
                      <tbody>
                        <tr>
                          <td class="help shortcut"><kbd>?</kbd></td>
                          <td>Open this help</td>
                        </tr>
                        <tr>
                          <td class="next shortcut"><kbd>n</kbd></td>
                          <td>Next page</td>
                        </tr>
                        <tr>
                          <td class="prev shortcut"><kbd>p</kbd></td>
                          <td>Previous page</td>
                        </tr>
                        <tr>
                          <td class="search shortcut"><kbd>s</kbd></td>
                          <td>Search</td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                  <div class="modal-footer">
                  </div>
              </div>
          </div>
      </div>
      
          </body>
      </html>
      
      <!--
      MkDocs version : 1.6.1
      Build Date UTC : NORMALIZED
      -->
  
    ''',
    'site/page/index.html': '''
      <!DOCTYPE html>
      <html lang="en" data-bs-theme="light">
          <head>
              <meta charset="utf-8">
              <meta http-equiv="X-UA-Compatible" content="IE=edge">
              <meta name="viewport" content="width=device-width, initial-scale=1.0">
              
              
              
              <link rel="shortcut icon" href="../img/favicon.ico">
              <title>This is a file - Test1</title>
              <link href="../css/bootstrap.min.css" rel="stylesheet">
              <link href="../css/fontawesome.min.css" rel="stylesheet">
              <link href="../css/brands.min.css" rel="stylesheet">
              <link href="../css/solid.min.css" rel="stylesheet">
              <link href="../css/v4-font-face.min.css" rel="stylesheet">
              <link href="../css/base.css" rel="stylesheet">
              <link id="hljs-light" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github.min.css" >
              <link id="hljs-dark" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github-dark.min.css" disabled>
              <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
              <script>hljs.highlightAll();</script> 
          </head>
      
          <body>
              <div class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
                  <div class="container">
                      <a class="navbar-brand" href="..">Test1</a>
                      <!-- Expander button -->
                      <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
                          <span class="navbar-toggler-icon"></span>
                      </button>
      
                      <!-- Expanded navigation -->
                      <div id="navbar-collapse" class="navbar-collapse collapse">
                              <!-- Main navigation -->
                              <ul class="nav navbar-nav">
                                  <li class="nav-item">
                                      <a href=".." class="nav-link">Wooooo</a>
                                  </li>
                                  <li class="nav-item">
                                      <a href="./" class="nav-link active" aria-current="page">This is a file</a>
                                  </li>
                              </ul>
      
                          <ul class="nav navbar-nav ms-md-auto">
                                  <li class="nav-item">
                                      <a rel="prev" href=".." class="nav-link">
                                          <i class="fa fa-arrow-left"></i> Previous
                                      </a>
                                  </li>
                                  <li class="nav-item">
                                      <a rel="next" class="nav-link disabled">
                                          Next <i class="fa fa-arrow-right"></i>
                                      </a>
                                  </li>
                          </ul>
                      </div>
                  </div>
              </div>
      
              <div class="container">
                  <div class="row">
                          <div class="col-md-3"><div class="navbar-expand-md bs-sidebar hidden-print affix" role="complementary">
          <div class="navbar-header">
              <button type="button" class="navbar-toggler collapsed" data-bs-toggle="collapse" data-bs-target="#toc-collapse" title="Table of Contents">
                  <span class="fa fa-angle-down"></span>
              </button>
          </div>
      
          
          <div id="toc-collapse" class="navbar-collapse collapse card bg-body-tertiary">
              <ul class="nav flex-column">
                  
                  <li class="nav-item" data-bs-level="1"><a href="#this-is-a-file" class="nav-link">This is a file</a>
                    <ul class="nav flex-column">
                    </ul>
                  </li>
              </ul>
          </div>
      </div></div>
                          <div class="col-md-9" role="main">
      
      <h1 id="this-is-a-file">This is a file</h1>
      <blockquote>
      <p>https://github.com/quarto-dev/quarto-cli/issues/10626</p>
      </blockquote>
      <p>Right now mermaid diagrams are not rendered correctly on 1.5 So 1.6
      pre-release is needed.</p>
      <details class="note" open="open">
      <summary>Note</summary>
      <div>
      <p><code>&lt;figure class=''&gt;</code>{=html}</p>
      <div>
      <p><img alt="" src="NORMALIZED"{width="NORMALIZED in"
      height="NORMALIZED in"</p>
      </div>
      <p><code>&lt;/figure&gt;</code>{=html}</p>
      </div>
      </details></div>
                  </div>
              </div>
      
              <footer class="col-md-12">
                  <hr>
                  <p>Documentation built with <a href="https://www.mkdocs.org/">MkDocs</a>.</p>
              </footer>
              <script src="../js/bootstrap.bundle.min.js"></script>
              <script>
                  var base_url = "..",
                      shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
              </script>
              <script src="../js/base.js"></script>
      
              <div class="modal" id="mkdocs_keyboard_modal" tabindex="-1" role="dialog" aria-labelledby="keyboardModalLabel" aria-hidden="true">
          <div class="modal-dialog">
              <div class="modal-content">
                  <div class="modal-header">
                      <h4 class="modal-title" id="keyboardModalLabel">Keyboard Shortcuts</h4>
                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                  </div>
                  <div class="modal-body">
                    <table class="table">
                      <thead>
                        <tr>
                          <th style="width: 20%;">Keys</th>
                          <th>Action</th>
                        </tr>
                      </thead>
                      <tbody>
                        <tr>
                          <td class="help shortcut"><kbd>?</kbd></td>
                          <td>Open this help</td>
                        </tr>
                        <tr>
                          <td class="next shortcut"><kbd>n</kbd></td>
                          <td>Next page</td>
                        </tr>
                        <tr>
                          <td class="prev shortcut"><kbd>p</kbd></td>
                          <td>Previous page</td>
                        </tr>
                        <tr>
                          <td class="search shortcut"><kbd>s</kbd></td>
                          <td>Search</td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                  <div class="modal-footer">
                  </div>
              </div>
          </div>
      </div>
      
          </body>
      </html>
  
    ''',
  })
# ---
# name: test_build[docs_clean][docs_clean]
  dict({
    'site/index.html': '''
      <!DOCTYPE html>
      <html lang="en" data-bs-theme="light">
          <head>
              <meta charset="utf-8">
              <meta http-equiv="X-UA-Compatible" content="IE=edge">
              <meta name="viewport" content="width=device-width, initial-scale=1.0">
              <meta name="description" content="None">
              
              
              <link rel="shortcut icon" href="img/favicon.ico">
              <title>Test1</title>
              <link href="css/bootstrap.min.css" rel="stylesheet">
              <link href="css/fontawesome.min.css" rel="stylesheet">
              <link href="css/brands.min.css" rel="stylesheet">
              <link href="css/solid.min.css" rel="stylesheet">
              <link href="css/v4-font-face.min.css" rel="stylesheet">
              <link href="css/base.css" rel="stylesheet">
              <link id="hljs-light" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github.min.css" >
              <link id="hljs-dark" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github-dark.min.css" disabled>
              <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
              <script>hljs.highlightAll();</script> 
          </head>
      
          <body class="homepage">
              <div class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
                  <div class="container">
                      <a class="navbar-brand" href=".">Test1</a>
                      <!-- Expander button -->
                      <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
                          <span class="navbar-toggler-icon"></span>
                      </button>
      
                      <!-- Expanded navigation -->
                      <div id="navbar-collapse" class="navbar-collapse collapse">
                              <!-- Main navigation -->
                              <ul class="nav navbar-nav">
                                  <li class="nav-item">
                                      <a href="." class="nav-link active" aria-current="page">Wooooo</a>
                                  </li>
                                  <li class="nav-item">
                                      <a href="page/" class="nav-link">This is a file</a>
                                  </li>
                              </ul>
      
                          <ul class="nav navbar-nav ms-md-auto">
                                  <li class="nav-item">
                                      <a rel="prev" class="nav-link disabled">
                                          <i class="fa fa-arrow-left"></i> Previous
                                      </a>
                                  </li>
                                  <li class="nav-item">
                                      <a rel="next" href="page/" class="nav-link">
                                          Next <i class="fa fa-arrow-right"></i>
                                      </a>
                                  </li>
                          </ul>
                      </div>
                  </div>
              </div>
      
              <div class="container">
                  <div class="row">
                          <div class="col-md-3"><div class="navbar-expand-md bs-sidebar hidden-print affix" role="complementary">
          <div class="navbar-header">
              <button type="button" class="navbar-toggler collapsed" data-bs-toggle="collapse" data-bs-target="#toc-collapse" title="Table of Contents">
                  <span class="fa fa-angle-down"></span>
              </button>
          </div>
      
          
          <div id="toc-collapse" class="navbar-collapse collapse card bg-body-tertiary">
              <ul class="nav flex-column">
                  
                  <li class="nav-item" data-bs-level="1"><a href="#wooooo" class="nav-link">Wooooo</a>
                    <ul class="nav flex-column">
                    </ul>
                  </li>
              </ul>
          </div>
      </div></div>
                          <div class="col-md-9" role="main">
      
      <h1 id="wooooo">Wooooo</h1></div>
                  </div>
              </div>
      
              <footer class="col-md-12">
                  <hr>
                  <p>Documentation built with <a href="https://www.mkdocs.org/">MkDocs</a>.</p>
              </footer>
              <script src="js/bootstrap.bundle.min.js"></script>
              <script>
                  var base_url = ".",
                      shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
              </script>
              <script src="js/base.js"></script>
      
              <div class="modal" id="mkdocs_keyboard_modal" tabindex="-1" role="dialog" aria-labelledby="keyboardModalLabel" aria-hidden="true">
          <div class="modal-dialog">
              <div class="modal-content">
                  <div class="modal-header">
                      <h4 class="modal-title" id="keyboardModalLabel">Keyboard Shortcuts</h4>
                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                  </div>
                  <div class="modal-body">
                    <table class="table">
                      <thead>
                        <tr>
                          <th style="width: 20%;">Keys</th>
                          <th>Action</th>
                        </tr>
                      </thead>
                      <tbody>
                        <tr>
                          <td class="help shortcut"><kbd>?</kbd></td>
                          <td>Open this help</td>
                        </tr>
                        <tr>
                          <td class="next shortcut"><kbd>n</kbd></td>
                          <td>Next page</td>
                        </tr>
                        <tr>
                          <td class="prev shortcut"><kbd>p</kbd></td>
                          <td>Previous page</td>
                        </tr>
                        <tr>
                          <td class="search shortcut"><kbd>s</kbd></td>
                          <td>Search</td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                  <div class="modal-footer">
                  </div>
              </div>
          </div>
      </div>
      
          </body>
      </html>
      
      <!--
      MkDocs version : 1.6.1
      Build Date UTC : NORMALIZED
      -->
  
    ''',
    'site/page/index.html': '''
      <!DOCTYPE html>
      <html lang="en" data-bs-theme="light">
          <head>
              <meta charset="utf-8">
              <meta http-equiv="X-UA-Compatible" content="IE=edge">
              <meta name="viewport" content="width=device-width, initial-scale=1.0">
              
              
              
              <link rel="shortcut icon" href="../img/favicon.ico">
              <title>This is a file - Test1</title>
              <link href="../css/bootstrap.min.css" rel="stylesheet">
              <link href="../css/fontawesome.min.css" rel="stylesheet">
              <link href="../css/brands.min.css" rel="stylesheet">
              <link href="../css/solid.min.css" rel="stylesheet">
              <link href="../css/v4-font-face.min.css" rel="stylesheet">
              <link href="../css/base.css" rel="stylesheet">
              <link id="hljs-light" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github.min.css" >
              <link id="hljs-dark" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github-dark.min.css" disabled>
              <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
              <script>hljs.highlightAll();</script> 
          </head>
      
          <body>
              <div class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
                  <div class="container">
                      <a class="navbar-brand" href="..">Test1</a>
                      <!-- Expander button -->
                      <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
                          <span class="navbar-toggler-icon"></span>
                      </button>
      
                      <!-- Expanded navigation -->
                      <div id="navbar-collapse" class="navbar-collapse collapse">
                              <!-- Main navigation -->
                              <ul class="nav navbar-nav">
                                  <li class="nav-item">
                                      <a href=".." class="nav-link">Wooooo</a>
                                  </li>
                                  <li class="nav-item">
                                      <a href="./" class="nav-link active" aria-current="page">This is a file</a>
                                  </li>
                              </ul>
      
                          <ul class="nav navbar-nav ms-md-auto">
                                  <li class="nav-item">
                                      <a rel="prev" href=".." class="nav-link">
                                          <i class="fa fa-arrow-left"></i> Previous
                                      </a>
                                  </li>
                                  <li class="nav-item">
                                      <a rel="next" class="nav-link disabled">
                                          Next <i class="fa fa-arrow-right"></i>
                                      </a>
                                  </li>
                          </ul>
                      </div>
                  </div>
              </div>
      
              <div class="container">
                  <div class="row">
                          <div class="col-md-3"><div class="navbar-expand-md bs-sidebar hidden-print affix" role="complementary">
          <div class="navbar-header">
              <button type="button" class="navbar-toggler collapsed" data-bs-toggle="collapse" data-bs-target="#toc-collapse" title="Table of Contents">
                  <span class="fa fa-angle-down"></span>
              </button>
          </div>
      
          
          <div id="toc-collapse" class="navbar-collapse collapse card bg-body-tertiary">
              <ul class="nav flex-column">
              </ul>
          </div>
      </div></div>
                          <div class="col-md-9" role="main">
      
      <pre><code class="language-python">print(&quot;Hello&quot;)
      
      </code></pre>
      <details class="note" open="open">
      <summary>output</summary>
      <pre><code>Hello
      </code></pre>
      </details></div>
                  </div>
              </div>
      
              <footer class="col-md-12">
                  <hr>
                  <p>Documentation built with <a href="https://www.mkdocs.org/">MkDocs</a>.</p>
              </footer>
              <script src="../js/bootstrap.bundle.min.js"></script>
              <script>
                  var base_url = "..",
                      shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
              </script>
              <script src="../js/base.js"></script>
      
              <div class="modal" id="mkdocs_keyboard_modal" tabindex="-1" role="dialog" aria-labelledby="keyboardModalLabel" aria-hidden="true">
          <div class="modal-dialog">
              <div class="modal-content">
                  <div class="modal-header">
                      <h4 class="modal-title" id="keyboardModalLabel">Keyboard Shortcuts</h4>
                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                  </div>
                  <div class="modal-body">
                    <table class="table">
                      <thead>
                        <tr>
                          <th style="width: 20%;">Keys</th>
                          <th>Action</th>
                        </tr>
                      </thead>
                      <tbody>
                        <tr>
                          <td class="help shortcut"><kbd>?</kbd></td>
                          <td>Open this help</td>
                        </tr>
                        <tr>
                          <td class="next shortcut"><kbd>n</kbd></td>
                          <td>Next page</td>
                        </tr>
                        <tr>
                          <td class="prev shortcut"><kbd>p</kbd></td>
                          <td>Previous page</td>
                        </tr>
                        <tr>
                          <td class="search shortcut"><kbd>s</kbd></td>
                          <td>Search</td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                  <div class="modal-footer">
                  </div>
              </div>
          </div>
      </div>
      
          </body>
      </html>
  
    ''',
  })
# ---
# name: test_build[docs_dirty][docs_dirty]
  dict({
    'docs/page.md': '''
      ---
      biblio-config: true
      labels:
        abstract: Abstract
        affiliations: Affiliations
        authors: Authors
        description: Description
        doi: Doi
        keywords: Keywords
        modified: Modified
        published: Published
        related_formats: Other Formats
      title: This is a file
      toc-title: Table of contents
      ---
      
      :::: {.cell execution_count="1"}
      ``` {.python .cell-code}
      print("Hello")
      ```
      
      ::: {.cell-output .cell-output-stdout}
          Hello
      :::
      ::::
  
    ''',
  })
# ---
# name: test_build[docs_ignore][docs_ignore]
  dict({
    'site/index.html': '''
      <!DOCTYPE html>
      <html lang="en" data-bs-theme="light">
          <head>
              <meta charset="utf-8">
              <meta http-equiv="X-UA-Compatible" content="IE=edge">
              <meta name="viewport" content="width=device-width, initial-scale=1.0">
              <meta name="description" content="None">
              
              
              <link rel="shortcut icon" href="img/favicon.ico">
              <title>Test1</title>
              <link href="css/bootstrap.min.css" rel="stylesheet">
              <link href="css/fontawesome.min.css" rel="stylesheet">
              <link href="css/brands.min.css" rel="stylesheet">
              <link href="css/solid.min.css" rel="stylesheet">
              <link href="css/v4-font-face.min.css" rel="stylesheet">
              <link href="css/base.css" rel="stylesheet">
              <link id="hljs-light" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github.min.css" >
              <link id="hljs-dark" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github-dark.min.css" disabled>
              <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
              <script>hljs.highlightAll();</script> 
          </head>
      
          <body class="homepage">
              <div class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
                  <div class="container">
                      <a class="navbar-brand" href=".">Test1</a>
                      <!-- Expander button -->
                      <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
                          <span class="navbar-toggler-icon"></span>
                      </button>
      
                      <!-- Expanded navigation -->
                      <div id="navbar-collapse" class="navbar-collapse collapse">
                              <!-- Main navigation -->
                              <ul class="nav navbar-nav">
                                  <li class="nav-item">
                                      <a href="." class="nav-link active" aria-current="page">Wooooo</a>
                                  </li>
                                  <li class="nav-item">
                                      <a href="my_ugly_page/" class="nav-link">This is a file</a>
                                  </li>
                                  <li class="nav-item">
                                      <a href="page/" class="nav-link">This is a file</a>
                                  </li>
                              </ul>
      
                          <ul class="nav navbar-nav ms-md-auto">
                                  <li class="nav-item">
                                      <a rel="prev" class="nav-link disabled">
                                          <i class="fa fa-arrow-left"></i> Previous
                                      </a>
                                  </li>
                                  <li class="nav-item">
                                      <a rel="next" href="my_ugly_page/" class="nav-link">
                                          Next <i class="fa fa-arrow-right"></i>
                                      </a>
                                  </li>
                          </ul>
                      </div>
                  </div>
              </div>
      
              <div class="container">
                  <div class="row">
                          <div class="col-md-3"><div class="navbar-expand-md bs-sidebar hidden-print affix" role="complementary">
          <div class="navbar-header">
              <button type="button" class="navbar-toggler collapsed" data-bs-toggle="collapse" data-bs-target="#toc-collapse" title="Table of Contents">
                  <span class="fa fa-angle-down"></span>
              </button>
          </div>
      
          
          <div id="toc-collapse" class="navbar-collapse collapse card bg-body-tertiary">
              <ul class="nav flex-column">
                  
                  <li class="nav-item" data-bs-level="1"><a href="#wooooo" class="nav-link">Wooooo</a>
                    <ul class="nav flex-column">
                    </ul>
                  </li>
              </ul>
          </div>
      </div></div>
                          <div class="col-md-9" role="main">
      
      <h1 id="wooooo">Wooooo</h1></div>
                  </div>
              </div>
      
              <footer class="col-md-12">
                  <hr>
                  <p>Documentation built with <a href="https://www.mkdocs.org/">MkDocs</a>.</p>
              </footer>
              <script src="js/bootstrap.bundle.min.js"></script>
              <script>
                  var base_url = ".",
                      shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
              </script>
              <script src="js/base.js"></script>
      
              <div class="modal" id="mkdocs_keyboard_modal" tabindex="-1" role="dialog" aria-labelledby="keyboardModalLabel" aria-hidden="true">
          <div class="modal-dialog">
              <div class="modal-content">
                  <div class="modal-header">
                      <h4 class="modal-title" id="keyboardModalLabel">Keyboard Shortcuts</h4>
                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                  </div>
                  <div class="modal-body">
                    <table class="table">
                      <thead>
                        <tr>
                          <th style="width: 20%;">Keys</th>
                          <th>Action</th>
                        </tr>
                      </thead>
                      <tbody>
                        <tr>
                          <td class="help shortcut"><kbd>?</kbd></td>
                          <td>Open this help</td>
                        </tr>
                        <tr>
                          <td class="next shortcut"><kbd>n</kbd></td>
                          <td>Next page</td>
                        </tr>
                        <tr>
                          <td class="prev shortcut"><kbd>p</kbd></td>
                          <td>Previous page</td>
                        </tr>
                        <tr>
                          <td class="search shortcut"><kbd>s</kbd></td>
                          <td>Search</td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                  <div class="modal-footer">
                  </div>
              </div>
          </div>
      </div>
      
          </body>
      </html>
      
      <!--
      MkDocs version : 1.6.1
      Build Date UTC : NORMALIZED
      -->
  
    ''',
    'site/my_ugly_page/index.html': '''
      <!DOCTYPE html>
      <html lang="en" data-bs-theme="light">
          <head>
              <meta charset="utf-8">
              <meta http-equiv="X-UA-Compatible" content="IE=edge">
              <meta name="viewport" content="width=device-width, initial-scale=1.0">
              
              
              
              <link rel="shortcut icon" href="../img/favicon.ico">
              <title>This is a file - Test1</title>
              <link href="../css/bootstrap.min.css" rel="stylesheet">
              <link href="../css/fontawesome.min.css" rel="stylesheet">
              <link href="../css/brands.min.css" rel="stylesheet">
              <link href="../css/solid.min.css" rel="stylesheet">
              <link href="../css/v4-font-face.min.css" rel="stylesheet">
              <link href="../css/base.css" rel="stylesheet">
              <link id="hljs-light" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github.min.css" >
              <link id="hljs-dark" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github-dark.min.css" disabled>
              <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
              <script>hljs.highlightAll();</script> 
          </head>
      
          <body>
              <div class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
                  <div class="container">
                      <a class="navbar-brand" href="..">Test1</a>
                      <!-- Expander button -->
                      <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
                          <span class="navbar-toggler-icon"></span>
                      </button>
      
                      <!-- Expanded navigation -->
                      <div id="navbar-collapse" class="navbar-collapse collapse">
                              <!-- Main navigation -->
                              <ul class="nav navbar-nav">
                                  <li class="nav-item">
                                      <a href=".." class="nav-link">Wooooo</a>
                                  </li>
                                  <li class="nav-item">
                                      <a href="./" class="nav-link active" aria-current="page">This is a file</a>
                                  </li>
                                  <li class="nav-item">
                                      <a href="../page/" class="nav-link">This is a file</a>
                                  </li>
                              </ul>
      
                          <ul class="nav navbar-nav ms-md-auto">
                                  <li class="nav-item">
                                      <a rel="prev" href=".." class="nav-link">
                                          <i class="fa fa-arrow-left"></i> Previous
                                      </a>
                                  </li>
                                  <li class="nav-item">
                                      <a rel="next" href="../page/" class="nav-link">
                                          Next <i class="fa fa-arrow-right"></i>
                                      </a>
                                  </li>
                          </ul>
                      </div>
                  </div>
              </div>
      
              <div class="container">
                  <div class="row">
                          <div class="col-md-3"><div class="navbar-expand-md bs-sidebar hidden-print affix" role="complementary">
          <div class="navbar-header">
              <button type="button" class="navbar-toggler collapsed" data-bs-toggle="collapse" data-bs-target="#toc-collapse" title="Table of Contents">
                  <span class="fa fa-angle-down"></span>
              </button>
          </div>
      
          
          <div id="toc-collapse" class="navbar-collapse collapse card bg-body-tertiary">
              <ul class="nav flex-column">
                  
                  <li class="nav-item" data-bs-level="1"><a href="#this-is-a-file" class="nav-link">This is a file</a>
                    <ul class="nav flex-column">
                    </ul>
                  </li>
              </ul>
          </div>
      </div></div>
                          <div class="col-md-9" role="main">
      
      <h1 id="this-is-a-file">This is a file</h1>
      <details class="note" open="open">
      <summary>Note</summary>
      <div>
      <p><code>&lt;figure class=''&gt;</code>{=html}</p>
      <div>
      <p><img alt="" src="NORMALIZED"{width="NORMALIZED in"
      height="NORMALIZED in"</p>
      </div>
      <p><code>&lt;/figure&gt;</code>{=html}</p>
      </div>
      </details></div>
                  </div>
              </div>
      
              <footer class="col-md-12">
                  <hr>
                  <p>Documentation built with <a href="https://www.mkdocs.org/">MkDocs</a>.</p>
              </footer>
              <script src="../js/bootstrap.bundle.min.js"></script>
              <script>
                  var base_url = "..",
                      shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
              </script>
              <script src="../js/base.js"></script>
      
              <div class="modal" id="mkdocs_keyboard_modal" tabindex="-1" role="dialog" aria-labelledby="keyboardModalLabel" aria-hidden="true">
          <div class="modal-dialog">
              <div class="modal-content">
                  <div class="modal-header">
                      <h4 class="modal-title" id="keyboardModalLabel">Keyboard Shortcuts</h4>
                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                  </div>
                  <div class="modal-body">
                    <table class="table">
                      <thead>
                        <tr>
                          <th style="width: 20%;">Keys</th>
                          <th>Action</th>
                        </tr>
                      </thead>
                      <tbody>
                        <tr>
                          <td class="help shortcut"><kbd>?</kbd></td>
                          <td>Open this help</td>
                        </tr>
                        <tr>
                          <td class="next shortcut"><kbd>n</kbd></td>
                          <td>Next page</td>
                        </tr>
                        <tr>
                          <td class="prev shortcut"><kbd>p</kbd></td>
                          <td>Previous page</td>
                        </tr>
                        <tr>
                          <td class="search shortcut"><kbd>s</kbd></td>
                          <td>Search</td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                  <div class="modal-footer">
                  </div>
              </div>
          </div>
      </div>
      
          </body>
      </html>
  
    ''',
    'site/page/index.html': '''
      <!DOCTYPE html>
      <html lang="en" data-bs-theme="light">
          <head>
              <meta charset="utf-8">
              <meta http-equiv="X-UA-Compatible" content="IE=edge">
              <meta name="viewport" content="width=device-width, initial-scale=1.0">
              
              
              
              <link rel="shortcut icon" href="../img/favicon.ico">
              <title>This is a file - Test1</title>
              <link href="../css/bootstrap.min.css" rel="stylesheet">
              <link href="../css/fontawesome.min.css" rel="stylesheet">
              <link href="../css/brands.min.css" rel="stylesheet">
              <link href="../css/solid.min.css" rel="stylesheet">
              <link href="../css/v4-font-face.min.css" rel="stylesheet">
              <link href="../css/base.css" rel="stylesheet">
              <link id="hljs-light" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github.min.css" >
              <link id="hljs-dark" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github-dark.min.css" disabled>
              <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
              <script>hljs.highlightAll();</script> 
          </head>
      
          <body>
              <div class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
                  <div class="container">
                      <a class="navbar-brand" href="..">Test1</a>
                      <!-- Expander button -->
                      <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
                          <span class="navbar-toggler-icon"></span>
                      </button>
      
                      <!-- Expanded navigation -->
                      <div id="navbar-collapse" class="navbar-collapse collapse">
                              <!-- Main navigation -->
                              <ul class="nav navbar-nav">
                                  <li class="nav-item">
                                      <a href=".." class="nav-link">Wooooo</a>
                                  </li>
                                  <li class="nav-item">
                                      <a href="../my_ugly_page/" class="nav-link">This is a file</a>
                                  </li>
                                  <li class="nav-item">
                                      <a href="./" class="nav-link active" aria-current="page">This is a file</a>
                                  </li>
                              </ul>
      
                          <ul class="nav navbar-nav ms-md-auto">
                                  <li class="nav-item">
                                      <a rel="prev" href="../my_ugly_page/" class="nav-link">
                                          <i class="fa fa-arrow-left"></i> Previous
                                      </a>
                                  </li>
                                  <li class="nav-item">
                                      <a rel="next" class="nav-link disabled">
                                          Next <i class="fa fa-arrow-right"></i>
                                      </a>
                                  </li>
                          </ul>
                      </div>
                  </div>
              </div>
      
              <div class="container">
                  <div class="row">
                          <div class="col-md-3"><div class="navbar-expand-md bs-sidebar hidden-print affix" role="complementary">
          <div class="navbar-header">
              <button type="button" class="navbar-toggler collapsed" data-bs-toggle="collapse" data-bs-target="#toc-collapse" title="Table of Contents">
                  <span class="fa fa-angle-down"></span>
              </button>
          </div>
      
          
          <div id="toc-collapse" class="navbar-collapse collapse card bg-body-tertiary">
              <ul class="nav flex-column">
                  
                  <li class="nav-item" data-bs-level="1"><a href="#this-is-a-file" class="nav-link">This is a file</a>
                    <ul class="nav flex-column">
                    </ul>
                  </li>
              </ul>
          </div>
      </div></div>
                          <div class="col-md-9" role="main">
      
      <h1 id="this-is-a-file">This is a file</h1>
      <details class="note" open="open">
      <summary>Note</summary>
      <div>
      <p><code>&lt;figure class=''&gt;</code>{=html}</p>
      <div>
      <p><img alt="" src="NORMALIZED"{width="NORMALIZED in"
      height="NORMALIZED in"</p>
      </div>
      <p><code>&lt;/figure&gt;</code>{=html}</p>
      </div>
      </details></div>
                  </div>
              </div>
      
              <footer class="col-md-12">
                  <hr>
                  <p>Documentation built with <a href="https://www.mkdocs.org/">MkDocs</a>.</p>
              </footer>
              <script src="../js/bootstrap.bundle.min.js"></script>
              <script>
                  var base_url = "..",
                      shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
              </script>
              <script src="../js/base.js"></script>
      
              <div class="modal" id="mkdocs_keyboard_modal" tabindex="-1" role="dialog" aria-labelledby="keyboardModalLabel" aria-hidden="true">
          <div class="modal-dialog">
              <div class="modal-content">
                  <div class="modal-header">
                      <h4 class="modal-title" id="keyboardModalLabel">Keyboard Shortcuts</h4>
                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                  </div>
                  <div class="modal-body">
                    <table class="table">
                      <thead>
                        <tr>
                          <th style="width: 20%;">Keys</th>
                          <th>Action</th>
                        </tr>
                      </thead>
                      <tbody>
                        <tr>
                          <td class="help shortcut"><kbd>?</kbd></td>
                          <td>Open this help</td>
                        </tr>
                        <tr>
                          <td class="next shortcut"><kbd>n</kbd></td>
                          <td>Next page</td>
                        </tr>
                        <tr>
                          <td class="prev shortcut"><kbd>p</kbd></td>
                          <td>Previous page</td>
                        </tr>
                        <tr>
                          <td class="search shortcut"><kbd>s</kbd></td>
                          <td>Search</td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                  <div class="modal-footer">
                  </div>
              </div>
          </div>
      </div>
      
          </body>
      </html>
  
    ''',
  })
# ---
# name: test_build[docs_issue69][docs_issue69]
  dict({
    'site/example/index.html': '''
      <!DOCTYPE html>
      <html lang="en" data-bs-theme="light">
          <head>
              <meta charset="utf-8">
              <meta http-equiv="X-UA-Compatible" content="IE=edge">
              <meta name="viewport" content="width=device-width, initial-scale=1.0">
              
              
              
              <link rel="shortcut icon" href="../img/favicon.ico">
              <title>Example Quarto Document - Issue69 Test</title>
              <link href="../css/bootstrap.min.css" rel="stylesheet">
              <link href="../css/fontawesome.min.css" rel="stylesheet">
              <link href="../css/brands.min.css" rel="stylesheet">
              <link href="../css/solid.min.css" rel="stylesheet">
              <link href="../css/v4-font-face.min.css" rel="stylesheet">
              <link href="../css/base.css" rel="stylesheet">
              <link id="hljs-light" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github.min.css" >
              <link id="hljs-dark" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github-dark.min.css" disabled>
              <link href="../assets/_mkdocstrings.css" rel="stylesheet">
              <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
              <script>hljs.highlightAll();</script> 
          </head>
      
          <body>
              <div class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
                  <div class="container">
                      <a class="navbar-brand" href="..">Issue69 Test</a>
                      <!-- Expander button -->
                      <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
                          <span class="navbar-toggler-icon"></span>
                      </button>
      
                      <!-- Expanded navigation -->
                      <div id="navbar-collapse" class="navbar-collapse collapse">
                              <!-- Main navigation -->
                              <ul class="nav navbar-nav">
                                  <li class="nav-item">
                                      <a href=".." class="nav-link">Test for Issue #69</a>
                                  </li>
                                  <li class="nav-item">
                                      <a href="./" class="nav-link active" aria-current="page">Example Quarto Document</a>
                                  </li>
                                  <li class="nav-item">
                                      <a href="../mkdocstrings_test/" class="nav-link">mkdocstrings Integration Test</a>
                                  </li>
                              </ul>
      
                          <ul class="nav navbar-nav ms-md-auto">
                                  <li class="nav-item">
                                      <a rel="prev" href=".." class="nav-link">
                                          <i class="fa fa-arrow-left"></i> Previous
                                      </a>
                                  </li>
                                  <li class="nav-item">
                                      <a rel="next" href="../mkdocstrings_test/" class="nav-link">
                                          Next <i class="fa fa-arrow-right"></i>
                                      </a>
                                  </li>
                          </ul>
                      </div>
                  </div>
              </div>
      
              <div class="container">
                  <div class="row">
                          <div class="col-md-3"><div class="navbar-expand-md bs-sidebar hidden-print affix" role="complementary">
          <div class="navbar-header">
              <button type="button" class="navbar-toggler collapsed" data-bs-toggle="collapse" data-bs-target="#toc-collapse" title="Table of Contents">
                  <span class="fa fa-angle-down"></span>
              </button>
          </div>
      
          
          <div id="toc-collapse" class="navbar-collapse collapse card bg-body-tertiary">
              <ul class="nav flex-column">
                  
                  <li class="nav-item" data-bs-level="1"><a href="#example" class="nav-link">Example</a>
                    <ul class="nav flex-column">
                    </ul>
                  </li>
              </ul>
          </div>
      </div></div>
                          <div class="col-md-9" role="main">
      
      <h1 id="example">Example</h1>
      <p>This is a simple quarto document.</p>
      <pre><code class="language-python">print(&quot;Hello from Quarto!&quot;)
      
      </code></pre>
      <details class="note" open="open">
      <summary>output</summary>
      <pre><code>Hello from Quarto!
      </code></pre>
      </details></div>
                  </div>
              </div>
      
              <footer class="col-md-12">
                  <hr>
                  <p>Documentation built with <a href="https://www.mkdocs.org/">MkDocs</a>.</p>
              </footer>
              <script src="../js/bootstrap.bundle.min.js"></script>
              <script>
                  var base_url = "..",
                      shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
              </script>
              <script src="../js/base.js"></script>
      
              <div class="modal" id="mkdocs_keyboard_modal" tabindex="-1" role="dialog" aria-labelledby="keyboardModalLabel" aria-hidden="true">
          <div class="modal-dialog">
              <div class="modal-content">
                  <div class="modal-header">
                      <h4 class="modal-title" id="keyboardModalLabel">Keyboard Shortcuts</h4>
                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                  </div>
                  <div class="modal-body">
                    <table class="table">
                      <thead>
                        <tr>
                          <th style="width: 20%;">Keys</th>
                          <th>Action</th>
                        </tr>
                      </thead>
                      <tbody>
                        <tr>
                          <td class="help shortcut"><kbd>?</kbd></td>
                          <td>Open this help</td>
                        </tr>
                        <tr>
                          <td class="next shortcut"><kbd>n</kbd></td>
                          <td>Next page</td>
                        </tr>
                        <tr>
                          <td class="prev shortcut"><kbd>p</kbd></td>
                          <td>Previous page</td>
                        </tr>
                        <tr>
                          <td class="search shortcut"><kbd>s</kbd></td>
                          <td>Search</td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                  <div class="modal-footer">
                  </div>
              </div>
          </div>
      </div>
      
          </body>
      </html>
  
    ''',
    'site/index.html': '''
      <!DOCTYPE html>
      <html lang="en" data-bs-theme="light">
          <head>
              <meta charset="utf-8">
              <meta http-equiv="X-UA-Compatible" content="IE=edge">
              <meta name="viewport" content="width=device-width, initial-scale=1.0">
              <meta name="description" content="None">
              
              
              <link rel="shortcut icon" href="img/favicon.ico">
              <title>Issue69 Test</title>
              <link href="css/bootstrap.min.css" rel="stylesheet">
              <link href="css/fontawesome.min.css" rel="stylesheet">
              <link href="css/brands.min.css" rel="stylesheet">
              <link href="css/solid.min.css" rel="stylesheet">
              <link href="css/v4-font-face.min.css" rel="stylesheet">
              <link href="css/base.css" rel="stylesheet">
              <link id="hljs-light" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github.min.css" >
              <link id="hljs-dark" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github-dark.min.css" disabled>
              <link href="assets/_mkdocstrings.css" rel="stylesheet">
              <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
              <script>hljs.highlightAll();</script> 
          </head>
      
          <body class="homepage">
              <div class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
                  <div class="container">
                      <a class="navbar-brand" href=".">Issue69 Test</a>
                      <!-- Expander button -->
                      <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
                          <span class="navbar-toggler-icon"></span>
                      </button>
      
                      <!-- Expanded navigation -->
                      <div id="navbar-collapse" class="navbar-collapse collapse">
                              <!-- Main navigation -->
                              <ul class="nav navbar-nav">
                                  <li class="nav-item">
                                      <a href="." class="nav-link active" aria-current="page">Test for Issue #69</a>
                                  </li>
                                  <li class="nav-item">
                                      <a href="example/" class="nav-link">Example Quarto Document</a>
                                  </li>
                                  <li class="nav-item">
                                      <a href="mkdocstrings_test/" class="nav-link">mkdocstrings Integration Test</a>
                                  </li>
                              </ul>
      
                          <ul class="nav navbar-nav ms-md-auto">
                                  <li class="nav-item">
                                      <a rel="prev" class="nav-link disabled">
                                          <i class="fa fa-arrow-left"></i> Previous
                                      </a>
                                  </li>
                                  <li class="nav-item">
                                      <a rel="next" href="example/" class="nav-link">
                                          Next <i class="fa fa-arrow-right"></i>
                                      </a>
                                  </li>
                          </ul>
                      </div>
                  </div>
              </div>
      
              <div class="container">
                  <div class="row">
                          <div class="col-md-3"><div class="navbar-expand-md bs-sidebar hidden-print affix" role="complementary">
          <div class="navbar-header">
              <button type="button" class="navbar-toggler collapsed" data-bs-toggle="collapse" data-bs-target="#toc-collapse" title="Table of Contents">
                  <span class="fa fa-angle-down"></span>
              </button>
          </div>
      
          
          <div id="toc-collapse" class="navbar-collapse collapse card bg-body-tertiary">
              <ul class="nav flex-column">
                  
                  <li class="nav-item" data-bs-level="1"><a href="#test-for-issue-69" class="nav-link">Test for Issue #69</a>
                    <ul class="nav flex-column">
                  <li class="nav-item" data-bs-level="2"><a href="#math.sqrt" class="nav-link">sqrt</a>
                    <ul class="nav flex-column">
                    </ul>
                  </li>
                    </ul>
                  </li>
              </ul>
          </div>
      </div></div>
                          <div class="col-md-9" role="main">
      
      <h1 id="test-for-issue-69">Test for Issue #69</h1>
      <p>This is a regular markdown file with mkdocstrings syntax.</p>
      
      
      <div class="doc doc-object doc-function">
      
      
      
      <a id="math.sqrt"></a>
          <div class="doc doc-contents first">
      
              <p>Return the square root of x.</p>
      
          </div>
      
      </div><p>The above line uses mkdocstrings syntax to document the math.sqrt function.</p></div>
                  </div>
              </div>
      
              <footer class="col-md-12">
                  <hr>
                  <p>Documentation built with <a href="https://www.mkdocs.org/">MkDocs</a>.</p>
              </footer>
              <script src="js/bootstrap.bundle.min.js"></script>
              <script>
                  var base_url = ".",
                      shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
              </script>
              <script src="js/base.js"></script>
      
              <div class="modal" id="mkdocs_keyboard_modal" tabindex="-1" role="dialog" aria-labelledby="keyboardModalLabel" aria-hidden="true">
          <div class="modal-dialog">
              <div class="modal-content">
                  <div class="modal-header">
                      <h4 class="modal-title" id="keyboardModalLabel">Keyboard Shortcuts</h4>
                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                  </div>
                  <div class="modal-body">
                    <table class="table">
                      <thead>
                        <tr>
                          <th style="width: 20%;">Keys</th>
                          <th>Action</th>
                        </tr>
                      </thead>
                      <tbody>
                        <tr>
                          <td class="help shortcut"><kbd>?</kbd></td>
                          <td>Open this help</td>
                        </tr>
                        <tr>
                          <td class="next shortcut"><kbd>n</kbd></td>
                          <td>Next page</td>
                        </tr>
                        <tr>
                          <td class="prev shortcut"><kbd>p</kbd></td>
                          <td>Previous page</td>
                        </tr>
                        <tr>
                          <td class="search shortcut"><kbd>s</kbd></td>
                          <td>Search</td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                  <div class="modal-footer">
                  </div>
              </div>
          </div>
      </div>
      
          </body>
      </html>
      
      <!--
      MkDocs version : 1.6.1
      Build Date UTC : NORMALIZED
      -->
  
    ''',
  })
# ---
# name: test_build[docs_no_qmd][docs_no_qmd]
  dict({
    'site/index.html': '''
      <!DOCTYPE html>
      <html lang="en" data-bs-theme="light">
          <head>
              <meta charset="utf-8">
              <meta http-equiv="X-UA-Compatible" content="IE=edge">
              <meta name="viewport" content="width=device-width, initial-scale=1.0">
              <meta name="description" content="None">
              
              
              <link rel="shortcut icon" href="img/favicon.ico">
              <title>Test1</title>
              <link href="css/bootstrap.min.css" rel="stylesheet">
              <link href="css/fontawesome.min.css" rel="stylesheet">
              <link href="css/brands.min.css" rel="stylesheet">
              <link href="css/solid.min.css" rel="stylesheet">
              <link href="css/v4-font-face.min.css" rel="stylesheet">
              <link href="css/base.css" rel="stylesheet">
              <link id="hljs-light" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github.min.css" >
              <link id="hljs-dark" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github-dark.min.css" disabled>
              <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
              <script>hljs.highlightAll();</script> 
          </head>
      
          <body class="homepage">
              <div class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
                  <div class="container">
                      <a class="navbar-brand" href=".">Test1</a>
      
                      <!-- Expanded navigation -->
                      <div id="navbar-collapse" class="navbar-collapse collapse">
      
                          <ul class="nav navbar-nav ms-md-auto">
                          </ul>
                      </div>
                  </div>
              </div>
      
              <div class="container">
                  <div class="row">
                          <div class="col-md-3"><div class="navbar-expand-md bs-sidebar hidden-print affix" role="complementary">
          <div class="navbar-header">
              <button type="button" class="navbar-toggler collapsed" data-bs-toggle="collapse" data-bs-target="#toc-collapse" title="Table of Contents">
                  <span class="fa fa-angle-down"></span>
              </button>
          </div>
      
          
          <div id="toc-collapse" class="navbar-collapse collapse card bg-body-tertiary">
              <ul class="nav flex-column">
                  
                  <li class="nav-item" data-bs-level="1"><a href="#wooooo" class="nav-link">Wooooo</a>
                    <ul class="nav flex-column">
                    </ul>
                  </li>
              </ul>
          </div>
      </div></div>
                          <div class="col-md-9" role="main">
      
      <h1 id="wooooo">Wooooo</h1></div>
                  </div>
              </div>
      
              <footer class="col-md-12">
                  <hr>
                  <p>Documentation built with <a href="https://www.mkdocs.org/">MkDocs</a>.</p>
              </footer>
              <script src="js/bootstrap.bundle.min.js"></script>
              <script>
                  var base_url = ".",
                      shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
              </script>
              <script src="js/base.js"></script>
      
              <div class="modal" id="mkdocs_keyboard_modal" tabindex="-1" role="dialog" aria-labelledby="keyboardModalLabel" aria-hidden="true">
          <div class="modal-dialog">
              <div class="modal-content">
                  <div class="modal-header">
                      <h4 class="modal-title" id="keyboardModalLabel">Keyboard Shortcuts</h4>
                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                  </div>
                  <div class="modal-body">
                    <table class="table">
                      <thead>
                        <tr>
                          <th style="width: 20%;">Keys</th>
                          <th>Action</th>
                        </tr>
                      </thead>
                      <tbody>
                        <tr>
                          <td class="help shortcut"><kbd>?</kbd></td>
                          <td>Open this help</td>
                        </tr>
                        <tr>
                          <td class="next shortcut"><kbd>n</kbd></td>
                          <td>Next page</td>
                        </tr>
                        <tr>
                          <td class="prev shortcut"><kbd>p</kbd></td>
                          <td>Previous page</td>
                        </tr>
                        <tr>
                          <td class="search shortcut"><kbd>s</kbd></td>
                          <td>Search</td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                  <div class="modal-footer">
                  </div>
              </div>
          </div>
      </div>
      
          </body>
      </html>
      
      <!--
      MkDocs version : 1.6.1
      Build Date UTC : NORMALIZED
      -->
  
    ''',
  })
# ---
# name: test_build[docs_python][docs_python]
  dict({
    'site/index.html': '''
      <!DOCTYPE html>
      <html lang="en" data-bs-theme="light">
          <head>
              <meta charset="utf-8">
              <meta http-equiv="X-UA-Compatible" content="IE=edge">
              <meta name="viewport" content="width=device-width, initial-scale=1.0">
              <meta name="description" content="None">
              
              
              <link rel="shortcut icon" href="img/favicon.ico">
              <title>Test1</title>
              <link href="css/bootstrap.min.css" rel="stylesheet">
              <link href="css/fontawesome.min.css" rel="stylesheet">
              <link href="css/brands.min.css" rel="stylesheet">
              <link href="css/solid.min.css" rel="stylesheet">
              <link href="css/v4-font-face.min.css" rel="stylesheet">
              <link href="css/base.css" rel="stylesheet">
              <link id="hljs-light" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github.min.css" >
              <link id="hljs-dark" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github-dark.min.css" disabled>
              <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
              <script>hljs.highlightAll();</script> 
          </head>
      
          <body class="homepage">
              <div class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
                  <div class="container">
                      <a class="navbar-brand" href=".">Test1</a>
                      <!-- Expander button -->
                      <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
                          <span class="navbar-toggler-icon"></span>
                      </button>
      
                      <!-- Expanded navigation -->
                      <div id="navbar-collapse" class="navbar-collapse collapse">
                              <!-- Main navigation -->
                              <ul class="nav navbar-nav">
                                  <li class="nav-item">
                                      <a href="." class="nav-link active" aria-current="page">Wooooo</a>
                                  </li>
                                  <li class="nav-item">
                                      <a href="page/" class="nav-link">This is a file</a>
                                  </li>
                              </ul>
      
                          <ul class="nav navbar-nav ms-md-auto">
                                  <li class="nav-item">
                                      <a rel="prev" class="nav-link disabled">
                                          <i class="fa fa-arrow-left"></i> Previous
                                      </a>
                                  </li>
                                  <li class="nav-item">
                                      <a rel="next" href="page/" class="nav-link">
                                          Next <i class="fa fa-arrow-right"></i>
                                      </a>
                                  </li>
                          </ul>
                      </div>
                  </div>
              </div>
      
              <div class="container">
                  <div class="row">
                          <div class="col-md-3"><div class="navbar-expand-md bs-sidebar hidden-print affix" role="complementary">
          <div class="navbar-header">
              <button type="button" class="navbar-toggler collapsed" data-bs-toggle="collapse" data-bs-target="#toc-collapse" title="Table of Contents">
                  <span class="fa fa-angle-down"></span>
              </button>
          </div>
      
          
          <div id="toc-collapse" class="navbar-collapse collapse card bg-body-tertiary">
              <ul class="nav flex-column">
                  
                  <li class="nav-item" data-bs-level="1"><a href="#wooooo" class="nav-link">Wooooo</a>
                    <ul class="nav flex-column">
                    </ul>
                  </li>
              </ul>
          </div>
      </div></div>
                          <div class="col-md-9" role="main">
      
      <h1 id="wooooo">Wooooo</h1></div>
                  </div>
              </div>
      
              <footer class="col-md-12">
                  <hr>
                  <p>Documentation built with <a href="https://www.mkdocs.org/">MkDocs</a>.</p>
              </footer>
              <script src="js/bootstrap.bundle.min.js"></script>
              <script>
                  var base_url = ".",
                      shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
              </script>
              <script src="js/base.js"></script>
      
              <div class="modal" id="mkdocs_keyboard_modal" tabindex="-1" role="dialog" aria-labelledby="keyboardModalLabel" aria-hidden="true">
          <div class="modal-dialog">
              <div class="modal-content">
                  <div class="modal-header">
                      <h4 class="modal-title" id="keyboardModalLabel">Keyboard Shortcuts</h4>
                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                  </div>
                  <div class="modal-body">
                    <table class="table">
                      <thead>
                        <tr>
                          <th style="width: 20%;">Keys</th>
                          <th>Action</th>
                        </tr>
                      </thead>
                      <tbody>
                        <tr>
                          <td class="help shortcut"><kbd>?</kbd></td>
                          <td>Open this help</td>
                        </tr>
                        <tr>
                          <td class="next shortcut"><kbd>n</kbd></td>
                          <td>Next page</td>
                        </tr>
                        <tr>
                          <td class="prev shortcut"><kbd>p</kbd></td>
                          <td>Previous page</td>
                        </tr>
                        <tr>
                          <td class="search shortcut"><kbd>s</kbd></td>
                          <td>Search</td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                  <div class="modal-footer">
                  </div>
              </div>
          </div>
      </div>
      
          </body>
      </html>
      
      <!--
      MkDocs version : 1.6.1
      Build Date UTC : NORMALIZED
      -->
  
    ''',
    'site/page/index.html': '''
      <!DOCTYPE html>
      <html lang="en" data-bs-theme="light">
          <head>
              <meta charset="utf-8">
              <meta http-equiv="X-UA-Compatible" content="IE=edge">
              <meta name="viewport" content="width=device-width, initial-scale=1.0">
              
              
              
              <link rel="shortcut icon" href="../img/favicon.ico">
              <title>This is a file - Test1</title>
              <link href="../css/bootstrap.min.css" rel="stylesheet">
              <link href="../css/fontawesome.min.css" rel="stylesheet">
              <link href="../css/brands.min.css" rel="stylesheet">
              <link href="../css/solid.min.css" rel="stylesheet">
              <link href="../css/v4-font-face.min.css" rel="stylesheet">
              <link href="../css/base.css" rel="stylesheet">
              <link id="hljs-light" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github.min.css" >
              <link id="hljs-dark" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github-dark.min.css" disabled>
              <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
              <script>hljs.highlightAll();</script> 
          </head>
      
          <body>
              <div class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
                  <div class="container">
                      <a class="navbar-brand" href="..">Test1</a>
                      <!-- Expander button -->
                      <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
                          <span class="navbar-toggler-icon"></span>
                      </button>
      
                      <!-- Expanded navigation -->
                      <div id="navbar-collapse" class="navbar-collapse collapse">
                              <!-- Main navigation -->
                              <ul class="nav navbar-nav">
                                  <li class="nav-item">
                                      <a href=".." class="nav-link">Wooooo</a>
                                  </li>
                                  <li class="nav-item">
                                      <a href="./" class="nav-link active" aria-current="page">This is a file</a>
                                  </li>
                              </ul>
      
                          <ul class="nav navbar-nav ms-md-auto">
                                  <li class="nav-item">
                                      <a rel="prev" href=".." class="nav-link">
                                          <i class="fa fa-arrow-left"></i> Previous
                                      </a>
                                  </li>
                                  <li class="nav-item">
                                      <a rel="next" class="nav-link disabled">
                                          Next <i class="fa fa-arrow-right"></i>
                                      </a>
                                  </li>
                          </ul>
                      </div>
                  </div>
              </div>
      
              <div class="container">
                  <div class="row">
                          <div class="col-md-3"><div class="navbar-expand-md bs-sidebar hidden-print affix" role="complementary">
          <div class="navbar-header">
              <button type="button" class="navbar-toggler collapsed" data-bs-toggle="collapse" data-bs-target="#toc-collapse" title="Table of Contents">
                  <span class="fa fa-angle-down"></span>
              </button>
          </div>
      
          
          <div id="toc-collapse" class="navbar-collapse collapse card bg-body-tertiary">
              <ul class="nav flex-column">
              </ul>
          </div>
      </div></div>
                          <div class="col-md-9" role="main">
      
      <pre><code class="language-python">print(&quot;Hello&quot;)
      
      import warnings
      warnings.warn(&quot;This is a warning&quot;)
      
      </code></pre>
      <details class="note" open="open">
      <summary>output</summary>
      <pre><code>Hello
      </code></pre>
      </details>
      <details class="warning" open="open">
      <summary>stderr</summary>
      <pre><code>/SOMEWHERE/ipykernel_XXXXX/1292902873.py:4: UserWarning: This is a warning
        warnings.warn("This is a warning")
      </code></pre>
      </details>
      <pre><code class="language-python">raise NotImplementedError(&quot;This is an error&quot;)
      
      </code></pre>
      <details class="danger" open="open">
      <summary>error</summary>
      <pre><code>NotImplementedError: This is an error
      ANSICODESTRIPPED---------------------------------------------------------------------------ANSICODESTRIPPED
      ANSICODESTRIPPEDNotImplementedErrorANSICODESTRIPPED                       Traceback (most recent call last)
      ANSICODESTRIPPEDCellANSICODESTRIPPEDANSICODESTRIPPED ANSICODESTRIPPEDANSICODESTRIPPEDIn[2]ANSICODESTRIPPEDANSICODESTRIPPED, line 1ANSICODESTRIPPED
      ANSICODESTRIPPED----&gt; ANSICODESTRIPPEDANSICODESTRIPPED1ANSICODESTRIPPED ANSICODESTRIPPEDraiseANSICODESTRIPPED ANSICODESTRIPPEDNotImplementedErrorANSICODESTRIPPED(ANSICODESTRIPPED"ANSICODESTRIPPEDANSICODESTRIPPEDThis is an errorANSICODESTRIPPEDANSICODESTRIPPED"ANSICODESTRIPPED)
      
      ANSICODESTRIPPEDNotImplementedErrorANSICODESTRIPPED: This is an error
      </code></pre>
      </details></div>
                  </div>
              </div>
      
              <footer class="col-md-12">
                  <hr>
                  <p>Documentation built with <a href="https://www.mkdocs.org/">MkDocs</a>.</p>
              </footer>
              <script src="../js/bootstrap.bundle.min.js"></script>
              <script>
                  var base_url = "..",
                      shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
              </script>
              <script src="../js/base.js"></script>
      
              <div class="modal" id="mkdocs_keyboard_modal" tabindex="-1" role="dialog" aria-labelledby="keyboardModalLabel" aria-hidden="true">
          <div class="modal-dialog">
              <div class="modal-content">
                  <div class="modal-header">
                      <h4 class="modal-title" id="keyboardModalLabel">Keyboard Shortcuts</h4>
                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                  </div>
                  <div class="modal-body">
                    <table class="table">
                      <thead>
                        <tr>
                          <th style="width: 20%;">Keys</th>
                          <th>Action</th>
                        </tr>
                      </thead>
                      <tbody>
                        <tr>
                          <td class="help shortcut"><kbd>?</kbd></td>
                          <td>Open this help</td>
                        </tr>
                        <tr>
                          <td class="next shortcut"><kbd>n</kbd></td>
                          <td>Next page</td>
                        </tr>
                        <tr>
                          <td class="prev shortcut"><kbd>p</kbd></td>
                          <td>Previous page</td>
                        </tr>
                        <tr>
                          <td class="search shortcut"><kbd>s</kbd></td>
                          <td>Search</td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                  <div class="modal-footer">
                  </div>
              </div>
          </div>
      </div>
      
          </body>
      </html>
  
    ''',
  })
# ---
